// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgotPasswordComponent snapshot 1`] = `
<app-forgot-password
  authService={[Function AuthService]}
  errorMessage=""
  password=""
>
  <section>
    <mat-card>
      <mat-toolbar
        color="primary"
      >
        FORGOT-PASSWORD
      </mat-toolbar>
      <mat-card-content>
        <form
          class="ng-untouched ng-pristine ng-valid"
          novalidate=""
        >
          <div>
            <mat-form-field>
              <input
                class="ng-untouched ng-pristine ng-valid"
                matinput=""
                name="login"
                ng-reflect-model=""
                ng-reflect-name="login"
                ng-reflect-required=""
                ngmodel=""
                placeholder="LOGIN"
                required=""
                type="text"
              />
              <mat-icon
                matsuffix=""
              >
                account_circle
              </mat-icon>
            </mat-form-field>
            <mat-form-field>
              <input
                class="ng-untouched ng-pristine ng-valid"
                disabled=""
                matinput=""
                name="password"
                ng-reflect-is-disabled=""
                ng-reflect-model=""
                ng-reflect-name="password"
                placeholder="PASSWORD"
                type="text"
              />
              <mat-icon
                matsuffix=""
              >
                lock
              </mat-icon>
            </mat-form-field>
          </div>
          
          <div
            class="actions"
          >
            <button
              color="primary"
              mat-flat-button=""
            >
              SEND
            </button>
            <a
              href="/login"
              mat-button=""
              ng-reflect-router-link="/login"
            >
              SIGN-IN
            </a>
          </div>
        </form>
      </mat-card-content>
    </mat-card>
  </section>
</app-forgot-password>
`;

exports[`ForgotPasswordComponent snapshot 2`] = `
<app-forgot-password
  authService={[Function AuthService]}
  errorMessage={[Function String]}
  password=""
>
  <section>
    <mat-card>
      <mat-toolbar
        color="primary"
      >
        FORGOT-PASSWORD
      </mat-toolbar>
      <mat-card-content>
        <form
          class="ng-untouched ng-pristine ng-invalid"
          novalidate=""
        >
          <div>
            <mat-form-field>
              <input
                class="ng-untouched ng-pristine ng-invalid"
                matinput=""
                name="login"
                ng-reflect-model=""
                ng-reflect-name="login"
                ng-reflect-required=""
                ngmodel=""
                placeholder="LOGIN"
                required=""
                type="text"
              />
              <mat-icon
                matsuffix=""
              >
                account_circle
              </mat-icon>
            </mat-form-field>
            <mat-form-field>
              <input
                class="ng-untouched ng-pristine"
                disabled=""
                matinput=""
                name="password"
                ng-reflect-is-disabled=""
                ng-reflect-model=""
                ng-reflect-name="password"
                placeholder="PASSWORD"
                type="text"
              />
              <mat-icon
                matsuffix=""
              >
                lock
              </mat-icon>
            </mat-form-field>
          </div>
          
          <p
            class="err-message"
          >
            ERROR-TEST
          </p>
          <div
            class="actions"
          >
            <button
              color="primary"
              disabled=""
              mat-flat-button=""
            >
              SEND
            </button>
            <a
              href="/login"
              mat-button=""
              ng-reflect-router-link="/login"
            >
              SIGN-IN
            </a>
          </div>
        </form>
      </mat-card-content>
    </mat-card>
  </section>
</app-forgot-password>
`;

exports[`ForgotPasswordComponent snapshot 3`] = `
<app-forgot-password
  authService={[Function AuthService]}
  errorMessage=""
  password={[Function String]}
>
  <section>
    <mat-card>
      <mat-toolbar
        color="primary"
      >
        FORGOT-PASSWORD
      </mat-toolbar>
      <mat-card-content>
        <form
          class="ng-untouched ng-pristine ng-invalid"
          novalidate=""
        >
          <div>
            <mat-form-field>
              <input
                class="ng-untouched ng-pristine ng-invalid"
                matinput=""
                name="login"
                ng-reflect-model=""
                ng-reflect-name="login"
                ng-reflect-required=""
                ngmodel=""
                placeholder="LOGIN"
                required=""
                type="text"
              />
              <mat-icon
                matsuffix=""
              >
                account_circle
              </mat-icon>
            </mat-form-field>
            <mat-form-field>
              <input
                class="ng-untouched ng-pristine"
                disabled=""
                matinput=""
                name="password"
                ng-reflect-is-disabled=""
                ng-reflect-model="PASSWORD"
                ng-reflect-name="password"
                placeholder="PASSWORD"
                type="text"
              />
              <mat-icon
                matsuffix=""
              >
                lock
              </mat-icon>
            </mat-form-field>
          </div>
          
          <div
            class="actions"
          >
            <button
              color="primary"
              disabled=""
              mat-flat-button=""
            >
              SEND
            </button>
            <a
              href="/login"
              mat-button=""
              ng-reflect-router-link="/login"
            >
              SIGN-IN
            </a>
          </div>
        </form>
      </mat-card-content>
    </mat-card>
  </section>
</app-forgot-password>
`;
